--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=true sudo ./scripts/init_db.sh
+          SKIP_DOCKER=true C:\Users\c\IdeaProjects\zero2Prod\scripts\init_db.sh
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
@@ -143,7 +143,7 @@ jobs:
       - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=true sudo ./scripts/init_db.sh
+          SKIP_DOCKER=true C:\Users\c\IdeaProjects\zero2Prod\scripts\init_db.sh
       - name: Run clippy
         uses: actions-rs/clippy-check@v1
         with:
@@ -198,7 +198,7 @@ jobs:
       - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=true sudo ./scripts/init_db.sh
+          SKIP_DOCKER=true C:\Users\c\IdeaProjects\zero2Prod\scripts\init_db.sh
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
