--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["v4"]}
 chrono = { version = "0.4.22", default-features=false, features= ["clock"]}
+tracing = {version = "0.1", features = ["log"]}
+tracing-subscriber = {version = "0.3", features = ["registry","env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
