--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tracing = {version = "0.1", features = ["log"]}
 tracing-subscriber = {version = "0.3", features = ["registry","env-filter"]}
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
+secrecy = { version = "0.8", features = ["serde"]}
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
@@ -56,3 +57,4 @@ features = [
 ## They do not get included in the final application binary!
 [dev-dependencies]
 reqwest = "0.11"
+once_cell = "1"
