--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"]}
 tracing-actix-web = "0.6"
+serde-aux = "3"
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
@@ -42,7 +43,7 @@ tracing-actix-web = "0.6"
 serde = { version = "1", features = ["derive"]}
 
 [dependencies.sqlx]
-version = "0.6.1"
+version = "0.6.2"
 default-features = false
 features = [
     "runtime-tokio-rustls",
