--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"]}
 tracing-actix-web = "0.6"
 serde-aux = "3"
+unicode-segmentation = "1"
+validator = "0.14"
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
@@ -61,3 +63,7 @@ features = [
 [dev-dependencies]
 reqwest = "0.11"
 once_cell = "1"
+claim = "0.5"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
