--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,13 +57,20 @@ features = [
     "offline"
 ]
 
+[dependencies.reqwest]
+reqwest = "0.11"
+default-features = false
+# We need the 'json' feature flag to serialize/deserialize json payloads
+features = ["json", "rustls-tls"]
 
 # Dev dependencies are used exclusively when running tests or examples
 ## They do not get included in the final application binary!
 [dev-dependencies]
-reqwest = "0.11"
 once_cell = "1"
 claim = "0.5"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+tokio = {version ="1", features = ["rt","macros"]}
+wiremock ="0.5"
+serde_json = "1"
