--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -7,3 +7,13 @@ database:
   username: "postgres"
   password: "password"
   database_name: "newsletter"
+
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
+  # new value!
+  # we are only setting the development value,
+  # we'll deal with the production token outside of version control
+  # (given that it's a sensitive secret!)
+  authorization_token: "my-secret-token"
+  timeout_milliseconds: 10000
