--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -8,4 +8,4 @@ email_client:
   #value retrieved form postmarks api docs
   base_url: "https://api.postmark.app.com"
   #use the single sender email you authorised on postmark
-  sender_email: ""
+  #sender_email: "kr927dzy@iacodetest.anonaddy.com"
