--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgres://postgres:password@localhost:5432/newsletter"
-# fly io url  DATABASE_URL="postgres://postgres:4jmejNtgmTVyW41@localhost:6543/zero2prodrusttutorial?sslmode=disable"
+# fly io url DATABASE_URL="postgres://zero2prodrusttutorial:4jmejNtgmTVyW41@localhost:6543/zero2prodrusttutorial?sslmode=disable"
 #format = postgresql://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]
