--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tracing-actix-web = "0.6"
 serde-aux = "3"
 unicode-segmentation = "1"
 validator = "0.14"
+rand = {version = "0.8.0", features=["std_rng"]}
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
