--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ serde-aux = "3"
 unicode-segmentation = "1"
 validator = "0.14"
 rand = {version = "0.8.0", features=["std_rng"]}
+thiserror = "1"
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
