--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,12 @@ thiserror = "1"
 anyhow = "1"
 base64 = "0.21"
 argon2 = {version ="0.4", features = ["std"]}
+urlencoding = "2"
+htmlescape = "0.3"
+hmac = {version = "0.12", features = ["std"] }
+sha2 = "0.10"
+# tag was a byte slice encoded as a hex string, use this to decode it
+hex = "0.4"
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
