--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ hmac = {version = "0.12", features = ["std"] }
 sha2 = "0.10"
 # tag was a byte slice encoded as a hex string, use this to decode it
 hex = "0.4"
+actix-web-flash-messages = {version = "0.4", features = ["cookies"]}
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
@@ -72,7 +73,7 @@ features = [
 reqwest = "0.11"
 default-features = false
 # We need the 'json' feature flag to serialize/deserialize json payloads
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 # Dev dependencies are used exclusively when running tests or examples
 ## They do not get included in the final application binary!
