--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-uuid = { version = "1", features = ["v4"]}
 chrono = { version = "0.4.22", default-features=false, features= ["clock"]}
 tracing = {version = "0.1", features = ["log"]}
 tracing-subscriber = {version = "0.3", features = ["registry","env-filter"]}
@@ -36,6 +35,7 @@ tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"]}
 tracing-actix-web = "0.6"
 serde-aux = "3"
+serde_json = "1"
 unicode-segmentation = "1"
 validator = "0.14"
 rand = {version = "0.8.0", features=["std_rng"]}
@@ -50,6 +50,8 @@ sha2 = "0.10"
 # tag was a byte slice encoded as a hex string, use this to decode it
 hex = "0.4"
 actix-web-flash-messages = {version = "0.4", features = ["cookies"]}
+actix-session = {version = "0.7", features = ["redis-rs-tls-session"]}
+uuid = { version = "1", features = ["v4", "serde"]}
 
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
